--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "onesignal-node": "^3.4.0",
     "otp-generator": "^4.0.0",
     "paystack": "^2.0.1",
+    "termii-nodejs": "^1.1.3",
     "twilio": "^3.84.1"
   }
 }
